--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Sausedemo</artifactId>
+    <artifactId>VikaQase</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -89,7 +89,7 @@
     </build>
 
     <properties>
-        <suiteXmlFile>src/test/resources/Smoke.xml</suiteXmlFile>
+        <suiteXmlFile>src/test/resources/regression.xml</suiteXmlFile>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
