--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,7 @@
-qase.username = enter your username here
-qase.password = enter your password here
-qase.projectName = enter your  project name
+qase.email = bob123@mailinator.com
+qase.password = qwe123asd
+qase.base_url = https://app.qase.io/signup
+qase.login_url = https://app.qase.io/login
+qase.projects_url = https://app.qase.io/projects
+qase.repository_url = https://app.qase.io/project/DEMO?view=1&suite=2
+qase.test_plans_url = https://app.qase.io/plan/DEMO
