Updated configfile,changed url and moved the project ID separately

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,6 @@
 qase.email = bob123@mailinator.com
 qase.password = qwe123asd
-qase.base_url = https://app.qase.io/signup
-qase.login_url = https://app.qase.io/login
-qase.projects_url = https://app.qase.io/projects
-qase.repository_url = https://app.qase.io/project/DEMO?view=1&suite=2
-qase.test_plans_url = https://app.qase.io/plan/DEMO
+qase.base_url = https://app.qase.io
+qase.repository_uri = /project
+qase.test_plans_uri = /plan
+qase.project_id = /DEMO
