Fixed defects tests

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
 qase.email = bob123@mailinator.com
 qase.password = qwe123asd
 qase.base_url = https://app.qase.io
-qase.repository_uri = /project
-qase.test_plans_uri = /plan
-qase.project_id = /DEMO
+qase.base_api_url = https://api.qase.io/v1/
+qase.autrth_token = 74d33400e63f102e391e5e1bc8cb9d365cd9d350
+
